# mas

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  build_package.py  config.json  pyproject.toml  requirements.txt  setup.py  test_all_features.py  test_package.py  test_workflow.py
.github/workflows/: ci.yml
examples/data_pipeline/: README.md  config.json  test_data_pipeline.py
examples/document_processing/: README.md  config.json  test_document_processing.py
mas/: __init__.py  agent.py  agent_registry.py  workflow.py
mas/agents/: __init__.py  data_aggregator.py  data_formatter.py  data_transformer.py  data_validator.py  document_processor.py  document_reader.py  document_writer.py  end_agent.py  error_handler.py  processor_agent.py  starter_agent.py
test_env/: pyvenv.cfg
test_env/Scripts/: activate  activate.bat
