[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distributedapps-mas"
version = "1.0.0"
description = "Configuration-Driven Multi-Agent System Framework"
authors = [
    {name = "Ken Huang", email = "ken@distributedapps.ai"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24.0",
    "jsonschema>=4.17.3",
    "typing-extensions>=4.8.0",
    "python-json-logger>=2.0.7",
    "pydantic>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/distributedapps/mas"
Documentation = "https://distributedapps.ai/docs/mas"
Repository = "https://github.com/distributedapps/mas.git"
Issues = "https://github.com/distributedapps/mas/issues"

[tool.setuptools]
packages = ["mas"]
